tkg/2.1.0/antrea-network-policies/tkg2/gatekeeper/antrea-gw.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: NetworkPolicy
metadata:
  name: gatekeeper-antrea-gw
  namespace: gatekeeper-system
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          gatekeeper.sh/operation: webhook
  ingress:
    - action: Allow 
      from:
      - nodeSelector: {}
      name: allowCPAntreaGW
